Add docsDE link

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"projecturl": "https://github.com/GHSVS-de/plg_system_offlineghsvs",
 		"infosDE": "",
 		"infosEN": "https://github.com/GHSVS-de/plg_system_offlineghsvs#readme",
-		"docsDE": "",
+		"docsDE": "https://ghsvs.de/programmierer-schnipsel/joomla/376-template-stil-fuer-joomla-offline-modus-umswitchen",
 		"docsEN": "",
 		"lastTests": [
 			"PHP 8.2",
